--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,163 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-    --color-primary: #873cb2;
-    --color-primary-rgb: 135, 60, 178;
-    --color-text: #222222;
-    --color-white: #ffffff;
-    --color-dark: #000000;
-    --color-warning: #ffd000;
-    --color-text-muted: #676666;
-    --color-bg-primary: #f7f7f7;
-    --color-bg-primary-rgb: 247, 247, 247;
-    --color-bg-secondary: #ffffff;
-    --color-bg-secondary-rgb: 255, 255, 255;
-    --transition: all 0.4s ease-in-out;
+  --color-primary: #873cb2;
+  --color-primary-rgb: 135, 60, 178;
+  --color-text: #222222;
+  --color-white: #ffffff;
+  --color-dark: #000000;
+  --color-warning: #ffd000;
+  --color-text-muted: #676666;
+  --color-bg-primary: #f7f7f7;
+  --color-bg-primary-rgb: 247, 247, 247;
+  --color-bg-secondary: #ffffff;
+  --color-bg-secondary-rgb: 255, 255, 255;
+  --transition: all 0.4s ease-in-out;
 }
 
 [data-theme="dark"] {
-    --color-text: #ffffff;
-    --color-text-muted: #a1a0a0;
-    --color-bg-primary: #0a0a0c;
-    --color-bg-primary-rgb: 10, 10, 12;
-    --color-bg-secondary: #171719;
-    --color-bg-secondary-rgb: 23, 23, 25;
+  --color-text: #ffffff;
+  --color-text-muted: #a1a0a0;
+  --color-bg-primary: #0a0a0c;
+  --color-bg-primary-rgb: 10, 10, 12;
+  --color-bg-secondary: #171719;
+  --color-bg-secondary-rgb: 23, 23, 25;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+}
+
+html,
+body {
+  background: var(--color-bg-primary);
+  font-family: "Poppins", sans-serif;
+  scrollbar-width: thin;
+  scroll-behavior: smooth;
+  scrollbar-color: var(--color-primary) transparent;
+}
+
+body {
+  overflow: hidden;
+  overflow-y: auto;
+  max-width: 2000px;
+  margin: auto;
+  position: relative;
+  color: var(--color-text);
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+a {
+  color: var(--color-text);
+  text-decoration: none;
+  transition: var(--transition);
+}
+
+.text-muted {
+  color: var(--color-text-muted);
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.section-container {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  padding: 60px 1rem;
+}
+
+.section-header {
+  max-width: 800px;
+  margin: auto;
+  text-align: center;
+}
+
+.section-header h1 {
+  color: var(--color-primary);
+  font-size: 40px;
+}
+
+.section-header h2 {
+  font-size: 30px;
+}
+
+.primary {
+  color: var(--color-primary);
+}
+
+.blur {
+  -webkit-backdrop-filter: blur(50px);
+  backdrop-filter: var(--color-bg-primary);
+}
+
+.btn {
+  position: relative;
+  z-index: 1;
+  padding: 0.5rem 1.5rem;
+  border-radius: 62.5rem;
+  font-size: 0.88rem;
+  display: inline-block;
+  background: var(--color-bg-secondary);
+  transition: var(--transition);
+  cursor: pointer;
+}
+
+.btn-primary {
+  background: var(--color-primary);
+  color: var(--color-white);
+}
+
+.btn-primary:hover {
+  opacity: 0.7rem;
+}
+
+.profile {
+  width: 3rem;
+  height: 3rem;
+  min-width: 3rem;
+  min-height: 3rem;
+  max-width: 3rem;
+  max-height: 3rem;
+  overflow: hidden;
+  border-radius: 1000%;
+}
+
+.line-clamp-1 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+}
+
+/* Responsiveness of general styles */
+
+@media (max-width: 500px) {
+  .section-header h1 {
+    font-size: 30px;
+  }
+
+  .section-header h2 {
+    font-size: 20px;
+  }
 }
