--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -10,6 +10,21 @@
   width: 100%;
 }
 
+.navbar.drop {
+  position: fixed;
+  background: rgba(var(--color-bg-secondary-rgb), 0.8);
+  animation: drop 1s;
+}
+
+@keyframes drop {
+  0% {
+    top: -100%;
+  }
+  100% {
+    top: 0px;
+  }
+}
+
 .navbar .navigation {
   list-style: none;
   align-items: stretch;
